[tool.poetry]
name = "library-of-alexandria"
version = "0.0.1"
description = ""
authors = ["Nathan Branco Caracho <nathan.caracho@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
